Lazy Bones 1.3.0
===============================================================================
* Improved usage of colors to better support different Look & Feels
* Prettified the timer details view
* Added configuration option to set the start hour of the timeline. Since a 
  normal day does not start a 0 and end at 23:59 for most of the people, it 
  makes sence to let it start at e.g. 5 and and end at 4:59. This way we have
  less timers, which span over two days. Also most of timers are nearer to
  the center of the screen.
* Added a clear line to the timeline, which marks midnight
* Added labels to the left and right of the midnight marker to make clear,
  which days are shown

Lazy Bones 1.2.1
===============================================================================
* Dropped support for VDR 1.2.*
* Some internal refactoring
* Improved detection of doppelpack timers
* Added search to recordings panel
* Fixed rendering bugs in the recordings tree

Lazy Bones 1.2.0
===============================================================================
* Added support for IPTV-channels
* Added workaround to svdrp4j to support Reelbox channels with conditional 
  access

Lazy Bones 1.1.0
===============================================================================
* Added configuration option to disable the timer conflict notification.
* small GUI adjustments
* The timer description can now be formatted with the TVB plugin program 
  formatting mechanism.
* Fixed a charset encoding bug.

Lazy Bones 1.0.2
===============================================================================
* Fixed event loop bug in SuggestingJHistoryComboBox, which occured in 
  conjunction with the GTK+ LaF

Lazy Bones 1.0.1
===============================================================================
* Fixed a bug in the timer options dialog. The description could not be changed
  in some cases.
* Fixed bug. Preset for timer description selection didn't work.