@@ -1,0 +1,49 @@
+<html>
+<head>
+	<style type="text/css">
+	    html {
+	        padding: 0px;
+	        margin: 0px;
+	    }
+	
+		body {
+		    font-family: sans-serif;
+		    font-size: 12pt;
+		    padding: 8px;
+		    color: {color};
+		    background-color: {backgroundColor};
+		}
+		
+		h1 {
+		    font-size: 130%;
+		}
+		
+		h2 {
+            font-size: 120%;
+        }
+        
+		h3 {
+            font-size: 110%;
+        }
+        
+        hr {
+            border-style: dotted;
+            border-color: grey;
+            border-width: 1px;
+        }
+	</style>
+</head>
+
+<body>
+    <h1>{title}</h1>
+    <h2>{channel} - {startDate}&nbsp;&nbsp;&nbsp;{startTime} - {endTime}</h2>
+    <hr>
+    <p>{description}</p>
+    <br>
+    <hr>
+    <p>{i18n_directory}: {directory}</p>
+    <p>{i18n_lifetime}: {lifetime}</p>
+    <p>{i18n_priority}: {priority}</p>
+    <p>{i18n_streams}: {streams}</p>
+</body>
+</html>
