@@ -110,6 +110,7 @@ LazyBones.sort.new_recordings              = neue Aufnahmen zuerst
 LazyBones.sort_channels                    = Sender automatisch zuordnen (experimentell)
 LazyBones.start                            = Start
 LazyBones.stop                             = Stop
+LazyBones.streams                          = Spuren
 LazyBones.streamtype                       = Streamtyp
 LazyBones.sunday                           = Sonntag
 LazyBones.supressMatchDialog               = Unterd\u00FCcke VDR/EPG Dialog
