@@ -108,6 +108,7 @@ LazyBones.sort.new_recordings              = new recordings first
 LazyBones.sort_channels                    = Assign channels automatically (experimental)
 LazyBones.start                            = Start
 LazyBones.stop                             = Stop
+LazyBones.streams                          = Streams
 LazyBones.streamtype                       = Stream type
 LazyBones.sunday                           = Sunday
 LazyBones.supressMatchDialog               = Supress match dialog
