@@ -28,20 +28,20 @@
  */
 package lazybones.gui.components;
 
-import java.awt.Font;
+import java.awt.Color;
+import java.awt.Dimension;
 import java.awt.GridBagConstraints;
 import java.awt.GridBagLayout;
 import java.awt.Insets;
-import java.awt.event.MouseAdapter;
-import java.awt.event.MouseEvent;
+import java.io.ByteArrayOutputStream;
+import java.io.IOException;
+import java.io.InputStream;
 import java.text.DateFormat;
-import java.util.Locale;
 
-import javax.swing.Icon;
-import javax.swing.JLabel;
+import javax.swing.BorderFactory;
+import javax.swing.JEditorPane;
 import javax.swing.JPanel;
 import javax.swing.JScrollPane;
-import javax.swing.JTextArea;
 import javax.swing.JTree;
 import javax.swing.SwingUtilities;
 import javax.swing.UIManager;
@@ -68,15 +68,10 @@ public class RecordingDetailsPanel extends JPanel implements TreeSelectionListen
 
     private Recording recording;
 
-    private final JLabel folder = new JLabel();
-    private final JLabel title = new JLabel();
-    private final JLabel time = new JLabel();
-    private final DateFormat df = DateFormat.getDateTimeInstance(DateFormat.LONG, DateFormat.SHORT, Locale.getDefault());
-    private final JLabel shortTextLabel = new JLabel();
-    private final ExpandToggleButton showStreamsToggle = new ExpandToggleButton();
-    private final JLabel streamsLabelShort = new JLabel();
-    private final JLabel streamsLabel = new JLabel();
-    private final JTextArea desc = new JTextArea();
+    private JScrollPane scrollPane;
+    private JEditorPane htmlPane;
+
+    private String recordingDetailsTemplate;
 
     public RecordingDetailsPanel() {
         initGUI();
@@ -85,128 +80,97 @@ public class RecordingDetailsPanel extends JPanel implements TreeSelectionListen
     public RecordingDetailsPanel(Recording recording) {
         this.recording = recording;
         initGUI();
-        loadData();
+        updateHtmlPane();
     }
 
     public void setRecording(Recording recording) {
         this.recording = recording;
-        loadData();
+        updateHtmlPane();
     }
 
     private void initGUI() {
         setLayout(new GridBagLayout());
         GridBagConstraints gbc = new GridBagConstraints();
-        gbc.insets = new Insets(5, 5, 5, 5);
+
+        htmlPane = new JEditorPane();
+        htmlPane.setEditable(false);
+        htmlPane.setContentType("text/html");
+        htmlPane.setBorder(BorderFactory.createEmptyBorder());
+
+        scrollPane = new JScrollPane(htmlPane);
+        scrollPane.setMinimumSize(new Dimension(50, 50));
+        scrollPane.setHorizontalScrollBarPolicy(JScrollPane.HORIZONTAL_SCROLLBAR_NEVER);
         gbc.anchor = GridBagConstraints.WEST;
-        gbc.fill = GridBagConstraints.HORIZONTAL;
-        gbc.weightx = 1.0;
-        gbc.gridwidth = 2;
-
-        int y = 0;
-        gbc.gridx = 0;
-        gbc.gridy = y++;
-        title.setFont(title.getFont().deriveFont(Font.BOLD));
-        add(title, gbc);
-
-        gbc.gridx = 0;
-        gbc.gridy = y++;
-        folder.setIcon((Icon) UIManager.getDefaults().get("FileView.directoryIcon"));
-        folder.setVisible(false);
-        add(folder, gbc);
-
-        gbc.gridx = 0;
-        gbc.gridy = y++;
-        add(time, gbc);
-
-        gbc.gridx = 0;
-        gbc.gridy = y++;
-        add(shortTextLabel, gbc);
-
-        gbc.gridx = 0;
-        gbc.gridy = y;
-        gbc.fill = GridBagConstraints.NONE;
-        gbc.anchor = GridBagConstraints.NORTHWEST;
-        gbc.weightx = 0;
-        gbc.gridwidth = 1;
-        add(showStreamsToggle, gbc);
-        showStreamsToggle.addMouseListener(new MouseAdapter() {
-            @Override
-            public void mouseClicked(MouseEvent e) {
-                boolean selected = showStreamsToggle.isSelected();
-                adjustStreamLabelVisibility(selected);
-            }
-        });
-
-        gbc.gridx = 1;
-        gbc.gridy = y++;
-        gbc.fill = GridBagConstraints.HORIZONTAL;
-        gbc.weightx = 1;
-        add(streamsLabelShort, gbc);
-        streamsLabelShort.setText("Audio Stream and more ...");
-        add(streamsLabel, gbc);
-        streamsLabel.setVisible(false);
-        streamsLabel.setText("<html>1<br>2<br>3<br></html>");
-
-        gbc.gridx = 0;
-        gbc.gridy = y++;
-        gbc.gridwidth = 3;
         gbc.fill = GridBagConstraints.BOTH;
-        gbc.weighty = 1.0;
-        desc.setWrapStyleWord(true);
-        desc.setLineWrap(true);
-        desc.setEditable(false);
-        add(new JScrollPane(desc), gbc);
+        gbc.insets = new Insets(0, 5, 5, 0);
+        gbc.weightx = 1;
+        gbc.weighty = 1;
 
-        adjustStreamLabelVisibility(showStreamsToggle.isSelected());
+        add(scrollPane, gbc);
     }
 
-    private void adjustStreamLabelVisibility(boolean selected) {
-        if (recording != null && recording.getStreams().size() > 0) {
-            if (recording.getStreams().size() > 1) {
-                showStreamsToggle.setVisible(true);
-                if (selected) {
-                    streamsLabelShort.setVisible(false);
-                    streamsLabel.setVisible(true);
-                } else {
-                    streamsLabelShort.setVisible(true);
-                    streamsLabel.setVisible(false);
-                }
-            } else {
-                showStreamsToggle.setVisible(false);
-                streamsLabelShort.setVisible(false);
-                streamsLabel.setVisible(true);
-            }
-        } else {
-            showStreamsToggle.setVisible(false);
-            streamsLabelShort.setVisible(false);
-            streamsLabel.setVisible(false);
+    private void updateHtmlPane() {
+        try {
+            String template = getRecordingDetailsTemplate();
+            template = replaceTags(template);
+            htmlPane.setText(template);
+            htmlPane.setCaretPosition(0);
+        } catch (Exception e) {
+            htmlPane.setText("Couldn't load template for recording details:\n" + e.getLocalizedMessage());
         }
     }
 
-    private void loadData() {
-        title.setText(recording.getDisplayTitle());
-        title.setToolTipText(title.getText());
-        folder.setText(recording.getFolder());
-        folder.setVisible(recording.getFolder() != null);
-        time.setText(df.format(recording.getStartTime().getTime()));
-        String shortText = (recording.getShortText() != null && recording.getShortText().length() > 0) ? recording.getShortText() : "";
-        shortTextLabel.setText(shortText);
-        shortTextLabel.setToolTipText(shortTextLabel.getText());
-        desc.setText(recording.getDescription());
+    private String replaceTags(String template) {
+        template = template.replaceAll("\\{title\\}", recording.getDisplayTitle());
 
+        String channel = recording.getChannelName();
+        template = template.replaceAll("\\{channel\\}", channel);
+        DateFormat timeFormat = DateFormat.getTimeInstance(DateFormat.SHORT);
+        DateFormat dateFormat = DateFormat.getDateInstance(DateFormat.SHORT);
+        template = template.replaceAll("\\{startDate\\}", dateFormat.format(recording.getStartTime().getTime()));
+        template = template.replaceAll("\\{startTime\\}", timeFormat.format(recording.getStartTime().getTime()));
+        template = template.replaceAll("\\{endTime\\}", timeFormat.format(recording.getEndTime().getTime()));
+        template = template.replaceAll("\\{description\\}", recording.getDescription().replaceAll("\n", "<br>"));
+        template = template.replaceAll("\\{i18n_directory\\}", LazyBones.getTranslation("directory", "Directory"));
+        template = template.replaceAll("\\{directory\\}", recording.getFolder());
+        template = template.replaceAll("\\{i18n_lifetime\\}", LazyBones.getTranslation("lifetime", "Lifetime"));
+        template = template.replaceAll("\\{lifetime\\}", Integer.toString(recording.getLifetime()));
+        template = template.replaceAll("\\{i18n_priority\\}", LazyBones.getTranslation("priority", "Priority"));
+        template = template.replaceAll("\\{priority\\}", Integer.toString(recording.getPriority()));
+        template = template.replaceAll("\\{i18n_streams\\}", LazyBones.getTranslation("streams", "Streams"));
+        template = template.replaceAll("\\{streams\\}", createStreamsString());
+        template = template.replaceAll("\\{color\\}", toHexString(UIManager.getColor("TextArea.foreground")));
+        template = template.replaceAll("\\{backgroundColor\\}", toHexString(UIManager.getColor("TextArea.background")));
+        return template;
+    }
+
+    private String toHexString(Color c) {
+        StringBuilder sb = new StringBuilder("#");
+        sb.append(toHex(c.getRed()));
+        sb.append(toHex(c.getGreen()));
+        sb.append(toHex(c.getBlue()));
+        sb.append(toHex(c.getAlpha()));
+        return sb.toString();
+    }
+
+    private String toHex(int i) {
+        String hex = Integer.toString(i, 16);
+        return hex.length() == 2 ? hex : "0" + hex;
+    }
+
+    private String createStreamsString() {
         if (recording.getStreams().size() > 0) {
-            streamsLabelShort.setText(createStreamInfoString(recording.getStreams().get(0)));
-
-            String allStreams = "<html>";
+            StringBuilder streamInfo = new StringBuilder("<ul>");
             for (Stream stream : recording.getStreams()) {
-                String info = createStreamInfoString(stream);
-                allStreams += info + "<br>";
+                streamInfo.append("<li>");
+                streamInfo.append(createStreamInfoString(stream));
+                streamInfo.append("</li>");
             }
-            allStreams += "</html>";
-            streamsLabel.setText(allStreams);
+            streamInfo.append("</ul>");
+            return streamInfo.toString();
+        } else {
+            return "";
         }
-
-        adjustStreamLabelVisibility(showStreamsToggle.isSelected());
     }
 
     private String createStreamInfoString(Stream stream) {
@@ -216,18 +180,9 @@ public class RecordingDetailsPanel extends JPanel implements TreeSelectionListen
         return content + ' ' + description + " (" + language + ")";
     }
 
-    private void clearDetailsPanel() {
-        title.setText(null);
-        time.setText(null);
-        shortTextLabel.setText(null);
-        desc.setText(null);
-        recording = null;
-        adjustStreamLabelVisibility(showStreamsToggle.isSelected());
-    }
-
     @Override
     public void valueChanged(final TreeSelectionEvent e) {
-        final TreePath selected = e.getPath();
+        final TreePath selected = e.getNewLeadSelectionPath();
         if (selected != null) {
             TreeNode treeNode = (TreeNode) selected.getPathComponent(selected.getPathCount() - 1);
             if (treeNode instanceof Recording) {
@@ -238,7 +193,7 @@ public class RecordingDetailsPanel extends JPanel implements TreeSelectionListen
                         if (cmd.isSuccess()) {
                             setRecording(cmd.getRecording());
                         } else {
-                            clearDetailsPanel();
+                            reset();
                             String mesg = LazyBones
                                     .getTranslation("error_retrieve_recording_details", "Couldn't load recording details from VDR: {0}", response.getMessage());
                             logger.error(mesg);
@@ -254,15 +209,49 @@ public class RecordingDetailsPanel extends JPanel implements TreeSelectionListen
                 GetRecordingDetailsAction grda = new GetRecordingDetailsAction(rec, callback);
                 grda.enqueue();
             } else {
-                clearDetailsPanel();
+                reset();
             }
         } else {
-            title.setText(null);
-            time.setText(null);
-            shortTextLabel.setText(null);
-            desc.setText(null);
-            recording = null;
-            adjustStreamLabelVisibility(showStreamsToggle.isSelected());
+            reset();
+        }
+    }
+
+    public void reset() {
+        htmlPane.setText("<html><head></head><body></body></html>");
+    }
+
+    private String getRecordingDetailsTemplate() throws IOException {
+        if (recordingDetailsTemplate != null) {
+            return recordingDetailsTemplate;
+        }
+
+        InputStream in = null;
+        ByteArrayOutputStream bos = null;
+        try {
+            in = RecordingDetailsPanel.class.getClassLoader().getResourceAsStream("recording_details.html");
+            bos = new ByteArrayOutputStream();
+            int length = 0;
+            byte[] buffer = new byte[1024];
+            while ((length = in.read(buffer)) > 0) {
+                bos.write(buffer, 0, length);
+            }
+            recordingDetailsTemplate = new String(bos.toByteArray());
+            return recordingDetailsTemplate;
+        } finally {
+            if (in != null) {
+                try {
+                    in.close();
+                } catch (Exception e) {
+                    logger.error("Couldn't close input stream for recording details template", e);
+                }
+            }
+            if (bos != null) {
+                try {
+                    bos.close();
+                } catch (Exception e) {
+                    logger.error("Couldn't close stream", e);
+                }
+            }
         }
     }
 }
