@@ -2,6 +2,7 @@ Lazy Bones 1.3.0
 ===============================================================================
 * Improved usage of colors to better support different Look & Feels
 * Prettified the timer details view
+* Prettified the recording details view
 * Added configuration option to set the start hour of the timeline. Since a 
   normal day does not start a 0 and end at 23:59 for most of the people, it 
   makes sence to let it start at e.g. 5 and and end at 4:59. This way we have
@@ -10,6 +11,7 @@ Lazy Bones 1.3.0
 * Added a clear line to the timeline, which marks midnight
 * Added labels to the left and right of the midnight marker to make clear,
   which days are shown
+* Some GUI polishing
 
 Lazy Bones 1.2.1
 ===============================================================================
